--- a/docs/stylesheets/extra_v4.css
+++ b/docs/stylesheets/extra_v4.css
@@ -1,5 +1,5 @@
-/* Import Outfit Font */
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;800&display=swap');
+/* Font Import Removed for Privacy */
+/* @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;800&display=swap'); */
 
 :root {
   --glass-bg: rgba(30, 41, 59, 0.7);
@@ -11,7 +11,7 @@
 /* Global Styles */
 body,
 .md-typeset {
-  font-family: 'Outfit', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 /* Hero Section */
